--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -6,10 +6,11 @@ body {
   line-height: 1.6;
 }
 
-.container {
-  width: 100%;
-  height: auto;
-  position: relative;
+.page-container {
+  width: 100vw;
+  height: 100dvh; /* Uses dynamic viewport height */
+  box-sizing: border-box;
+  overflow:auto;
 }
 
 span {
@@ -18,31 +19,27 @@ span {
 
 /* 1. Navigation Bar */
 .navbar {
-  position: sticky;
-  top: 0;
-  background-color: #1f1f1f;
   display: flex;
+  flex-direction: row;
+  position: sticky;
   justify-content: space-between;
   align-items: center;
-  padding: 10px 20px;
-  z-index: 1000;
+  height: 8%;
+  padding: 0 40px;
+  background-color: #1f1f1f;
   font-family: 'Roboto', sans-serif;
 }
 
 .navbar img {
   height:80px;
   border-radius: 8px;
+  margin-top: 50px;
 }
 
 .navbar ul {
-  list-style: none;
   display: flex;
-  margin: 0;
-  padding: 0;
-}
-
-.navbar ul li {
-  margin: 0 15px;
+  list-style: none;
+  gap: 20px;
 }
 
 .navbar ul li a {
@@ -61,43 +58,48 @@ span {
   color: #f39c12;
 }
 
-/* 2. Home Section*/
-.hero {
-  height: 100vh;
-  background: url('./assets/elton.jpg') no-repeat center center/cover;
+/* Home Section*/
+.home-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: left;
   text-align: justify;
+  background: url('./assets/elton.jpg') no-repeat center center/cover;
+  min-height: 84%;
+  width: 100%;
   color: #ccc;
   font-family: 'Montserrat', sans-serif;
 }
 
-.hero-container {
+.home-content {
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
+  justify-content: center;
   align-items: flex-start;
-  padding: 20px;
-  width: 50%;
+  text-align: justify;
+  width: 60%;
+  height: 100%;
+  gap: 10px;
+  padding-left: 20px;
 }
 
-.hero h1 {
+.home-content h1 {
   font-size: 3rem;
-  margin: 0px;
+  margin: 0;
+  margin-top: 10px;
 }
 
-.hero h2 {
-  margin: 0px; margin-bottom: 50px;
+.home-content h2 {
+  margin: -10px 0 20px 0;
 }
 
-.hero p {
+.home-content p {
   font-size: 1rem;
-  margin: 0px; margin-bottom: 10px;
+  margin: 0;
 }
 
-.hero button {
+.home-content button {
   padding: 10px 20px;
   background-color: #f39c12;
   margin-top: 20px;
@@ -111,155 +113,135 @@ span {
   font-family: 'Montserrat', sans-serif;
 }
 
-.hero button:hover {
+.home-content button:hover {
   background-color: #e67e22;
 }
 
-/* Main shared container */
-.main-container {
-  height: auto;
-  width: 100%;
-  background-color: black;
+/* Education Section */
+.general-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   text-align: center;
+  min-height: 84%;
+  width: 100%;
+  background-color: black;
   color: #ccc;
   font-family: 'Montserrat', sans-serif;
-  padding-top: 50px;
-  padding-bottom: 50px;
-  position: relative;
-  overflow: visible; /* Allows the child to overflow */
+  padding: 40px 0;
 }
 
-/* Timeline Educational Component */
+/* Timeline Educational */
 .timeline-container {
-  position: relative;
-  max-width: 75%;
-  margin: 10px auto;
-  padding: 0 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: left;
+  width: 70%;
+  height: auto;
   border-left: 3px solid #f39c12; /* Vertical line */
-  position: relative;
-  overflow: visible; /* Allows the child to overflow */
-}
-
-/* Timeline Experience Component */
-.timeline-exp-container {
-  position: relative;
-  max-width: inherit;
-  margin: 0;
-  padding: 0 0px;
-  border-left: 0.5px dotted #f39c12; /* Vertical line */
-  position: relative;
-  overflow: visible; /* Allows the child to overflow */
+  gap: 20px;
+  overflow: hidden; /* Hide overflow */
 }
 
 .timeline-item {
   display: flex;
-  align-items: flex-start;
-  margin: 20px 0;
-  padding-left: 20px;
+  flex-direction: row;
+  justify-content: center;
+  align-items: left;
   transition: transform 0.6s ease, box-shadow 0.3s ease;
   border-radius: 8px;
-  position: relative;
-  overflow: visible; /* Allows the child to overflow */
+  padding-left: 10px;
 }
 
 .timeline-item-date {
   font-size: 0.85rem;
   color: #f39c12;
   font-weight: bold;
-  flex: 0 0 80px; /* Fixed width for the date */
-  text-align: right; /* Align the date to the right */
+  flex: 0 0 80px;
+  text-align: right;
   margin-right: 20px;
 }
 
 .timeline-item-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: left;
   background-color: #1f1f1f;
-  padding: 15px 20px;
+  padding: 10px 20px;
   width: 100%;
+  height: auto;
   border-radius: 8px;
-  position: relative;
-  overflow: visible; /* Allows the child to overflow */
-}
-
-.timeline-exp-item-content {
-  background-color: #2a2a2a;
-  padding: 15px 20px;
-  width: 100%;
-  border-radius: 8px;
-  position: relative;
-  overflow: visible; /* Allows the child to overflow */
 }
 
 .timeline-item-title {
   font-size: 1rem;
-  margin-bottom: 8px;
-  margin-left: 0px;
   color: #ccc;
   text-align: justify;
+  margin: 10px 0;
 }
 
-.timeline-item-detail-header {
-  display: block;
-  font-size: 0.9rem;
-  margin-bottom: 8px;
-  margin-left: 0px;
+.timeline-item-text {
+  font-size: 0.8rem;
+  text-align: justify;
   color: #ccc;
+  font-style: italic;
+  margin: 5px;
+
 }
 
 .flex-horizontal {
   display: flex;
-  align-items: center;
   flex-direction: row;
-  gap: 10px;
-  margin-bottom: -10px;
-}
-
-.flex-vertical {
-  display: flex;
-  align-items: left;
+  align-items:flex-start;
   justify-content: start;
-  flex-direction: column;
-  margin-bottom: 0px;
-  line-height: 1;
-  max-width: 500px;
+  gap: 10px;
+  padding: 0;
+  width: 100%;
+  height: auto;
 }
 
-.flex-horizontal-img {
+.degree-icon {
   max-height: 25px;
 }
 
-.flex-horizontal-logo {
-  max-height: 50px;
-  border-radius: 8px;
-}
-
-.badge-container {
+.arrow-icon {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
   height: auto;
-  width: 200px;
-  padding: 20px 10px;
+  width: 100%;
+  margin: 5px;
 }
 
-.badge-container-logo {
-  width: 100%; /* Image takes full width */
-  height: auto; /* Auto height to maintain aspect ratio */
-  border-radius: 8px;
-}
-
-.seeDetailIcon {
+.arrow-icon img{
   height: 8px;
+  width: 16px;
 }
 
 .timeline-item-details {
   display: none; /* Hide content by default */
 }
 
+.timeline-item-skill {
+  display: block;
+  font-size: 0.9rem;
+  color: #ccc;
+  font-style: italic;
+  text-align: justify;
+}
+
+.timeline-item-project {
+  font-size: 0.9rem;
+  text-align: justify;
+  color: #ccc;
+}
+
 .timeline-item-description{
   font-size: 0.9rem;
-  margin-bottom: 8px;
-  margin-left: 0px;
   text-align: left;
   color: #ccc;
   font-style: italic;
@@ -274,12 +256,113 @@ span {
   display: block; /* Show content on hover */
 }
 
-.timeline-item-content:hover .seeDetailIcon {
-  display: none; /* Hide seeDetailIcon on hover */
+.timeline-item-content:hover .arrow-icon {
+  display: none; /* Hide it on hover */
 }
 
-.timeline-item-content:hover .timeline-item-detail-header {
-  display: none; /* Hide seeDetailIcon on hover */
+/* project-container */
+.project-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: left;
+  text-align: justify;
+  gap: 16px; /* Gap between items */
+  scroll-behavior: smooth; /* Smooth scrolling */
+  width: auto;
+  height: auto;
+}
+
+.project-item {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: left;
+  text-align: justify;
+  gap: 16px; /* Gap between items */
+  background-color: #f5f5f5;
+  border-radius: 8px; /* Rounded corners for each item */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Shadow for each item */
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  width: 100%;
+  height: auto;
+}
+
+.project-card {
+  width: 10%; /* Full width of the item */
+  height: auto;
+}
+
+.project-card img {
+  width: 100%; /* Image takes full width */
+  height: auto; /* Auto height to maintain aspect ratio */
+  display: block; /* Ensure no extra space below image */
+}
+
+.project-card-text {
+  background-color: #2a2a2a;
+  color: #ccc;
+  font-size: 0.8rem;
+  margin: 0;
+  padding: 0px 20px 10px 20px;  
+  align-items: center;
+  justify-content: left;
+  text-align: justify;
+  border-radius: 0px 8px 8px 0px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
+  width: 90%;
+}
+
+.project-skills-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.project-skill {
+  background-color: #f39c12;
+  color: #1f1f1f;
+  padding: 5px 10px;
+  border-radius: 5px;
+  font-size: 0.8rem;
+  margin: 5px;
+}
+
+.project-item:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
+}
+
+.timeline-sub-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: left;
+  width: 100%;
+  height: auto;
+  border-left: 0.5px dotted #f39c12; /* Vertical line */
+  gap: 20px;
+  margin: 20px 0;
+  overflow: hidden; /* Hide overflow */
+}
+
+.timeline-sub-item-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: left;
+  background-color: #2a2a2a;
+  padding: 10px 20px;
+  width: 100%;
+  height: auto;
+  border-radius: 8px;
+}
+
+.timeline-item-body-text {
+  font-size: 0.9rem;
+  text-align: justify;
+  color: #ccc;
+  margin: 5px;
 }
 
 .timeline-item-header-text {
@@ -287,158 +370,52 @@ span {
   text-align: justify;
   color: #ccc;
   font-style: italic;
-}
-
-.timeline-item-body-text {
-  font-size: 0.9rem;
-  text-align: justify;
-  color: #ccc;
-}
-
-/* 4. Carousel Component */
-.carousel {
-  display: grid; /* Use CSS Grid for layout */
-  grid-auto-flow: row; /* Arrange items horizontally */
-  grid-auto-columns: min-content; /* Items take up as much width as they need */
-  gap: 16px; /* Gap between items */
-  padding: 10px; /* Padding around the carousel */
-  margin-top: -10px;
-  scroll-behavior: smooth; /* Smooth scrolling */
-  align-items: start; /* Align items to the top */
-  justify-content: left; /* Align items to the left */
-  width: inherit; /* Full width of the container */
-  height: auto; /* auto Height is auto to fit content */
-  position: relative;
-  overflow: visible; /* Allows the child to overflow */
-
-}
-
-.carousel-item {
-  display: grid; /* Make each item a grid */
-  grid-template-columns: auto 0.5fr auto; /* Three rows: auto height for image, 1fr for details, and auto for additional row */
-  background-color: #f5f5f5;
-  border-radius: 8px; /* Rounded corners for each item */
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Shadow for each item */
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-  width: inherit;
-  height: auto;
-  position: relative;
-  overflow: visible; /* Allows the child to overflow */
-}
-
-.carousel-card {
-  width: 150px; /* Full width of the item */
-  max-height: 150px;
-  overflow: hidden; /* Hide overflow */
-}
-
-.carousel-card img {
-  width: 100%; /* Image takes full width */
-  height: auto; /* Auto height to maintain aspect ratio */
-  display: block; /* Ensure no extra space below image */
-}
-
-.carousel-card-details {
-  background-color: #2a2a2a;
-  color: #ccc;
-  font-size: 0.8rem;
-  margin: 0;
-  padding: 10px 20px;  
-  align-items: center;
-  justify-content: left;
-  text-align: justify;
-  border-radius: 0px 8px 8px 0px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
-  width: 610px;
-  position:relative;
-}
-
-.project-skills-container {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  gap: 5px;
   margin: 5px;
 }
 
-.project-skills {
-  background-color: #f39c12;
-  color: #1f1f1f;
-  padding: 5px 10px;
-  border-radius: 5px;
-  font-size: 0.8rem;
-  margin: 0px;
+.timeline-item-content:hover .timeline-item-detail-header {
+  display: none; /* Hide seeDetailIcon on hover */
 }
 
-.carousel-item:hover {
-  transform: translateY(-5px);
-  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
+.flex-vertical {
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  justify-content: start;
+  text-align: justify;
+  width: 80%;
 }
 
-.carousel-item:hover .carousel-card-details {
-  display: block; /* Show content on hover */
+.badge-container {
+  width: 20%;
+  height: auto;
+  padding: 10px 10px;
 }
 
-/* 5. Form Component */
-.form {
-  max-width: 600px;
-  margin: 0 auto;
-  background-color: #ccc;
-  padding: 30px;
-  border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  font-family: 'Raleway', sans-serif;
-}
-
-.form input,
-.form textarea {
+.badge-container img {
   width: 100%;
-  padding: 10px;
-  margin-bottom: 15px;
-  border: 1px solid #ccc;
+  height: auto;
   border-radius: 8px;
-  font-size: 1rem;
-  color: #333333;
-  font-family: 'Raleway', sans-serif;
 }
 
-.form button {
-  width: 100%;
-  padding: 10px;
-  background-color: #f39c12;
-  border: none;
-  border-radius: 5px;
-  color: #ccc;
-  font-size: 1.2rem;
-  font-weight: 600;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-  font-family: 'Raleway', sans-serif;
+.company-logo {
+  max-height: 60px;
+  border-radius: 8px;
 }
 
-.form button:hover {
-  background-color: #e67e22;
-}
-
-
-/* 7. Footer */
+/* Footer */
 .footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
   background-color: #1f1f1f;
   color: #ccc;
-  padding: 20px 0;
-  text-align: center;
+  /* padding: 20px 0; */
+  height: 8%;
+  
   font-family: 'Lato', sans-serif;
-}
-
-.footer a {
-  color: #f39c12;
-  text-decoration: none;
-  margin: 0 10px;
-  transition: color 0.3s ease;
-}
-
-.footer a:hover {
-  color: #ccc;
 }
 
 .footer p {
@@ -450,4 +427,78 @@ span {
 .footerIcon {
   max-height: 40px;
   margin: 0 10px;
+}
+
+
+/* responsive */
+@media screen and (max-width: 768px) {
+
+  .body {
+    line-height: 1.2;
+  }
+
+  .home-content {
+    width: 80%;
+  }
+
+  .timeline-container {
+    width: 90%;
+  }
+
+  .timeline-item-date {
+    flex: 0 0 60px;
+  }
+
+  .timeline-item-content {
+    padding: 10px 10px;
+  }
+
+  .timeline-item-title {
+    font-size: 0.9rem;
+  }
+
+  .timeline-item-text {
+    font-size: 0.7rem;
+  }
+
+  .timeline-item-skill {
+    font-size: 0.8rem;
+  }
+
+  .timeline-item-project {
+    font-size: 0.8rem;
+  }
+
+  .timeline-item-description {
+    font-size: 0.8rem;
+  }
+
+  .project-card-text {
+    font-size: 0.7rem;
+  }
+
+  .project-skill {
+    font-size: 0.7rem;
+  }
+
+  .timeline-item-body-text {
+    font-size: 0.8rem;
+  }
+
+  .timeline-item-header-text {
+    font-size: 0.7rem;
+  }
+
+  .flex-vertical {
+    width: 90%;
+  }
+
+  .badge-container {
+    width: 30%;
+  }
+
+  .company-logo {
+    max-height: 40px;
+  }
+
 }
